# cmake_tutorial

./: CMakeLists.txt  main.cpp
chapter12_policies/: CMakeLists.txt
chapter7_using_subdirs/: CMakeLists.txt
chapter8_funcs_and_macros/: CMakeLists.txt
partI/: CMakeLists.txt
partI/chapter10_generator_expression/: CMakeLists.txt
partI/chapter11_modules/: CMakeLists.txt
partI/chapter4_build_simple_targets/: CMakeLists.txt
partI/chapter5_variables/: CMakeLists.txt
partI/chapter6_flow_control/: CMakeLists.txt
partI/chapter7_using_subdirs/: CMakeLists.txt
partI/chapter8_funcs_and_macros/: CMakeLists.txt
partI/chapter9_properties/: CMakeLists.txt
partII/: CMakeLists.txt
partII/chapter13_build_type/: CMakeLists.txt
partII/chapter14_compiler_linker_essentials/: CMakeLists.txt
partII/chapter15_language_requirements/: CMakeLists.txt
partII/chapter16_target_types/: CMakeLists.txt
partII/chapter17_custom_tasks/: CMakeLists.txt
partII/chapter18_working_with_files/: CMakeLists.txt  CMakeLists.txt.autosave
partII/chapter19_specifying_ver_details/: CMakeLists.txt
partII/chapter20_libraries/: CMakeLists.txt
partII/chapter21_toolchain/: CMakeLists.txt
partIII/: CMakeLists.txt
partIII/chapter23_finding_things/: CMakeLists.txt
