# description:
# focus on the builds

message("------- chapter13 - build type ----------")
add_subdirectory(chapter13_build_type)


message("------- chapter14 - compiler and linker essentials ----------")
add_subdirectory(chapter14_compiler_linker_essentials)


message("------- chapter15_language_requirements ----------")
add_subdirectory(chapter15_language_requirements)

