# description:
# focus on the builds

message("------- chapter13 - build type ----------")
add_subdirectory(chapter13_build_type)


message("------- chapter14 - compiler and linker essentials ----------")
add_subdirectory(chapter14_compiler_linker_essentials)


message("------- chapter15_language_requirements ----------")
add_subdirectory(chapter15_language_requirements)

message("------- chapter16 target types ----------")
add_subdirectory(chapter16_target_types)

message("------- chapter17_custom_tasks ----------")
add_subdirectory(chapter17_custom_tasks)

message("------- chapter18_working_with_files ----------")
add_subdirectory(chapter18_working_with_files)



